# firecrawl-wb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
example/: firecrawl_marimo.py
src/firecrawl/: __init__.py  client.py  exceptions.py  models.py  utils.py
tests/: smoke_test.py  test_client.py  test_models.py  test_utils.py
