[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firecrawl-wb"
version = "0.2.0"
description = "Lightweight, async-first Python wrapper for the Firecrawl v2 API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "wb200" }]
keywords = [
    "firecrawl",
    "web-scraping",
    "crawler",
    "async",
    "api-client",
    "web-extraction",
    "sitemap",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = ["httpx>=0.27.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.8", "mypy>=1.0"]

[project.urls]
Homepage = "https://github.com/wb200/firecrawl-wb"
Documentation = "https://github.com/wb200/firecrawl-wb#readme"
Repository = "https://github.com/wb200/firecrawl-wb"
Issues = "https://github.com/wb200/firecrawl-wb/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/firecrawl"]

[tool.hatch.build.targets.sdist]
include = ["src/firecrawl", "README.md", "LICENSE"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
